--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "start": "vite start"
+            
       }
 }
