package.json file changes

--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
             "@vitejs/plugin-react-swc": "^3.10.2",
             "vite": "^6.3.5"
       },
-      "scripts": {
+     "scripts": {
             "dev": "vite",
             "build": "vite build",
-            "start": "vite start"
-            
-      }
+            "preview": "vite preview --port 3000",
+            "start": "vite preview --port 3000"
+}
 }
